cluster/apps/strava-statistics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ss-brendon-ingress
  namespace: stava-ns
spec:
  rules:
    - host: "strava-stats.capricorn.brendonmccool.com"  # Your hostname
      http:
        paths:
        # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strava  # The name of the service
                port:
                  number: 8080  # Service Portnumber
